--- a/Night_Lights_Blending.ipynb
+++ b/Night_Lights_Blending.ipynb
@@ -546,13 +546,13 @@
     "\n",
     "\n",
     "image.putdata(pixeldata)\n",
-    "png_path = os.path.join(output_urban, res_name.replace(\".tif\",\".png\"))\n",
+    "png_path = os.path.join(urban_path, res_name.replace(\".tif\",\".png\"))\n",
     "res = image.save(png_path)\n",
     "#os.path.abspath(res)\n",
     "abs_path = os.path.abspath(png_path)\n",
     "work_dir = os.getcwd()\n",
     "id_ = work_dir.split('/')[2]\n",
-    "base_url = os.path.join('https://hub-int.eox.at/user',id_,'files')\n",
+    "base_url = os.path.join('https://hub-otc-sc.eox.at/user',id_,'files')\n",
     "#base_url\n",
     "abs_path = '/'.join(abs_path.split('/')[3:])\n",
     "#abs_path\n",
@@ -593,7 +593,7 @@
    "source": [
     "m = Map(basemap=basemaps.CartoDB.DarkMatter, center=(center[1], center[0]), zoom=6)\n",
     "image = ImageOverlay(\n",
-    "        url=os.path.join(base_url,abs_path), #url=\"https://hub-int.eox.at/user/<id>/files/<path_to_png>\n",
+    "        url=os.path.join(base_url,abs_path), #url=\"https://hub-otc-sc.eox.at/user/<id>/files/<path_to_png>\n",
     "        bounds=((ll[1], ll[0]), (ur[1], ur[0])) # SW and NE corners\n",
     "                    )\n",
     "m.add_layer(image);\n",
@@ -670,9 +670,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "lubojr-lubojr-lps25-2",
+   "display_name": "lps25-tutorial-dashboards",
    "language": "python",
-   "name": "conda-env-lubojr-lubojr-lps25-2-py"
+   "name": "eodashboardlps25-lps25-tutorial-dashboards"
   },
   "language_info": {
    "codemirror_mode": {
